# nexvia-hsk-lcms

./: .dockerignore  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  README.md  alembic.ini  celery_app.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: __init__.py  router.py
backend/app/core/: __init__.py  celery_tasks.py  config.py  deps.py  email.py  exceptions.py  security.py  storage.py
backend/app/db/: __init__.py  models.py  seed.py  session.py
backend/app/modules/auth/: __init__.py  model.py  router.py  schema.py  service.py
backend/app/modules/courses/: model.py  router.py  schema.py  service.py
backend/app/shared/: __init__.py  base_model.py  enums.py
backend/migrations/: env.py
backend/migrations/versions/: 09697284a1b1_rename_document_comments_comment_to_.py  2d32638c9255_fix_add_course.py  3bbedc9da4af_add_revoked_at_to_user_role_assignments.py  3f9b7ad8c2e1_add_scorm_package_fields.py  4f72c1a9b8de_add_content_versioning.py  5a1ac5338963_remove_scorm.py  6c2d9e1f4a33_add_scorm_packages.py  71d5494a6b9a_add_document_table.py  8a7dc58e4f2b_add_scorm_comments.py  9a663902a6ff_initial_migration.py  9c0f6a2d7e1b_add_review_logs.py  a1e3f9c50d82_refactor_scorm_comments_use_package_id.py  a3b1c2d4e5f6_add_question_category.py  b4c2d3e4f5a6_remove_question_tags.py  b8c840224392_add_use_and_roles_table.py  c570872e01bb_remove_unique_constraint_from_stored_.py  c7c8cb31b6a7_remove_avatar_url.py  f630dd057c66_add_questions.py  f66ff11ca0c6_remove_table_user_roles.py  fe9669646595_add_course.py
(+172 files in other folders)
